Git first commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  transition: all 0.3s ease;
+  background-color: #f6f8ff;
+  font-family: var(font-main);
+}
+
+.app.dark {
+  background-color: var(--color-bg-dark);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.main-container {
+  max-width: 550px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 1300px) {
+  .main-container {
+    max-width: 800px;
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 768px) {
+  .main-container {
+    max-width: 600px;
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 585px) {
+  .main-container {
+    width: 90%;
   }
 }
