--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-white: #ffffff;
+  --color-primary: #0079ff;
+  --color-bg-dark: #141d2f;
+  --color-bg-light: #f6f8ff;
+  --color-bg-contdark: #1e2a47;
+  --color-bg-contlight: #fefefe;
+  --color-bg-repolight: #f6f8ff;
+  --color-font-togglehovdark: #90a4d4;
+  --color-font-main: #222731;
+  --color-txt-main: #4b6a9b;
+  --color-txt-joined: #2b3442;
+  --color-txt-sec: #697c9a;
+  --font-main: "Space Mono", monospace;
+}
+
+/* --headerFontColor: #222731;
+  
+
+    
+ 
+    --searchInputPlaceholderFontColor: #4B6A9B;
+    --profileCardBGColor: #FEFEFE;
+ 
+    --profileCardJoinedFontColor: #697C9A;
+    --profileCardBioFontColor: #4B6A9B;
+    --profileCardStatsHeaderFontColor: #4B6A9B;
+    
+    --profileCardFooterIconLabelFontColor: #4B6A9B; */
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  font-family: var(--font-mont);
+}
+
+a {
+  text-decoration: none;
 }
